--- a/LocalLinear_KNN_ImpliedVolatility/Description
+++ b/LocalLinear_KNN_ImpliedVolatility/Description
@@ -1,1 +1,4 @@
-
+Local Linear Regression Using a Gaussian Kernel and KNN on Implied Volatility
+Both pdfs show predicted implied volatility as function of Time to maturity and strike price
+LLPreds.pdf uses Local Linear Regression for different Covariance Matrices
+KNNPreds.pdf uses KNN for different values of K
